# Learning_MLP

./: CMakeLists.txt  EasyML-master.kdev4  README.md
examples/: handwriting_recognize.cpp
include/easyml/: common.h
include/easyml/neural_network/: input_layer.h  layer.h  net.h  output_layer.h
include/easyml/util/: activation_function.h  cost_function.h  util.h
src/easyml/neural_network/: fully_connected_layer.cpp  net.cpp  output_layer.cpp
src/easyml/util/: mnist_helper.cpp  util.cpp
